# FreeRTOS_XPO

./: .cproject  .project  sdkconfig.old
components/comp_adc/: CMakeLists.txt  comp_adc.c
components/comp_adc/include/: comp_adc.h
components/comp_blink/: CMakeLists.txt  comp_blink.c
components/comp_blink/include/: comp_blink.h
components/comp_dht/: CMakeLists.txt  Kconfig.projbuild  comp_dht.c
components/comp_dht/include/: comp_dht.h
components/comp_input/: CMakeLists.txt  comp_input.c
components/comp_input/include/: comp_input.h
components/comp_pzem/: CMakeLists.txt  Kconfig.projbuild  comp_pzem.c
components/comp_pzem/include/: comp_pzem.h
components/comp_save_nvs/: CMakeLists.txt  comp_save_nvs.c
components/comp_save_nvs/include/: comp_save_nvs.h
components/dht_service/: CMakeLists.txt  dht_service.c
components/dht_service/include/: dht_service.h
components/pzem_service/: CMakeLists.txt  pzem_service.c
components/pzem_service/include/: pzem_service.h
main/: CMakeLists.txt  blink_main.c  freeRTOS_main.c
